# litex-template

./: .gitignore  .gitmodules  Makefile  Makefile.kv260  Makefile.quickfeather  Makefile.zcu216  Makefile.zedboard  Pipfile  README.md  flash.tcl  pyproject.toml
.github/workflows/: main.yml
digilent_zedboard/: README.md  boot.bif  boot.scr  boot_sd.cmd
gowin_flash_sim/: Makefile  README.md  sim_flash.py
prog/board/: digilent_zedboard.cfg
scripts/: ps7_boot.tcl  ps7_flash.tcl  psu_boot.tcl  s3_jlink_swd.cfg
src/: basesoc.py  export_icap.py  main.py  pciesoc.py  platform1.py  platform_sim.py  platform_xilinx.py  ps7_boot.tcl  settings.py  soc.py  soc_base.py
src/firmware/: CMakeLists.txt  Makefile  isr.c  linker.ld  main.c  main.h
src/gowin/: .gitignore  prim_sim.v.patch  sim_flash.py
