[tool.poetry]
name = "litex-template"
version = "0.1.0"
description = ""
authors = ["Ilia Sergachev <ilia.sergachev@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pythondata-cpu-vexriscv = "*"
pythondata-misc-tapcfg = "*"

[tool.poetry.dev-dependencies]
litex = {path = "lib/litex", develop = true}
litepcie = {path = "lib/litepcie", develop = true}

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
