[tool.poetry]
name = "litex-template"
version = "0.1.0"
description = ""
authors = ["Ilia Sergachev <ilia@sergachev.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
meson = "*"
pythondata-cpu-vexriscv = "*"
pythondata-misc-tapcfg = "*"
pythondata-software-picolibc = "*"
litex = {path = "lib/litex", develop = true}
litespi = {path = "lib/litespi", develop = true}
litehyperbus = {path = "lib/litehyperbus", develop = true}
litepcie = {path = "lib/litepcie", develop = true}
litex-boards = {path = "lib/litex-boards", develop = true}
simplejson = "*"
lxml = "*"

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
